utworzone zadanie i uruchomione - uzywajac paczki imagemin

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
+  "type": "module",
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0"
   },
   "devDependencies": {
-    "gulp-imagemin": "^8.0.0"
-  },
-  "description": ""
+    "gulp-imagemin": "^7.0.0"
+  }
 }
