--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zajecia-2",
+  "name": "zajecia-3 praca domowa",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "gulp-file-include": "^2.3.0",
     "gulp-imagemin": "^7.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "gulp-htmlmin": "^5.0.1"
   },
   "description": "",
   "dependencies": {
